--- a/app/globals.css
+++ b/app/globals.css
@@ -2,3 +2,5 @@
  @plugin './hero.ts';
  @source '../node_modules/@heroui/theme/dist/**/*.{js,ts,jsx,tsx}';
  @custom-variant dark (&:is(.dark *));
+
+ @plugin '@tailwindcss/typography';
